--- a/web/Iot Web interface 2/css/FutureLiving.css
+++ b/web/Iot Web interface 2/css/FutureLiving.css
@@ -32,7 +32,7 @@
     position: relative;
     width: 100%;
     height: 100%;
-    background: url(img1.jpg) no-repeat center center;
+    background: url(../rsc/img1.jpg) no-repeat center center;
     background-size: cover;
 
 }
